--- a/angular-app/src/app/course/course.component.html
+++ b/angular-app/src/app/course/course.component.html
@@ -1,10 +1,21 @@
+<head>
+<style>
+  .my-pagination /deep/ .ngx-pagination .current {
+    background: lightblue;
+  box-sizing: border-box;
+  }
+
+</style>
+
+</head>
+
 <div class="container">
     <br>
       <input class="form-control mb-4" id="tableSearch" type="text"
       placeholder="Enter Keyword for filter result" [(ngModel)]="searchedKeyword">
       <br>
       <div class="table-responsive-lg">
-          <table class="table table-striped table-inverse table-responsive ">
+          <table class="table table-dark ">
               
                   <tr>
                     <th >ID</th>
@@ -20,19 +31,8 @@
                     </tr> 
                     
           </table>
-        <!-- <table class="table table">
-            <tr>
-                <th  >ID</th>
-                <th  >User Id</th>
-                <th  >Title</th>
-            </tr>
-            <tr *ngFor="let course of data | paginate: { itemsPerPage: 10, currentPage: p } | filter:searchedKeyword">
-                <td >{{course.id}}</td>
-                <td >{{course.userId}}</td>
-                <td >{{course.title}}</td> 
-            </tr> 
-       </table> -->
-       <pagination-controls (pageChange)="p = $event"  responsive="true" previousLabel="Previous"
+      
+       <pagination-controls class="my-pagination pagination" (pageChange)="p = $event"  responsive="true" previousLabel="Previous"
                           nextLabel="Next"
                           screenReaderPaginationLabel="Pagination"
                           screenReaderPageLabel="page"
