--- a/angular-app/src/app/login/login.component.html
+++ b/angular-app/src/app/login/login.component.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+<div class="card">
+    <h4 class="card-header">Login</h4>
+    <div class="card-body">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && controls.username.errors }" />
+                <div *ngIf="submitted && controls.username.errors" class="invalid-feedback">
+                    <div *ngIf="controls.username.errors.required">Username is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && controls.password.errors }" />
+                <div *ngIf="submitted && controls.password.errors" class="invalid-feedback">
+                    <div *ngIf="controls.password.errors.required">Password is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <button [disabled]="loading" class="btn btn-primary">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Login
+                </button>
+                <!-- <a routerLink="../register" class="btn btn-link">Register</a> -->
+            </div>
+        </form>
+    </div>
+</div>
