--- a/angular-app/src/app/course/course.component.html
+++ b/angular-app/src/app/course/course.component.html
@@ -8,7 +8,7 @@
 </style>
 
 </head>
-
+<app-logout></app-logout>
 <div class="container">
     <br>
       <input class="form-control mb-4" id="tableSearch" type="text"
