--- a/angular-app/src/app/course/course.component.html
+++ b/angular-app/src/app/course/course.component.html
@@ -4,11 +4,18 @@
     background: lightblue;
   box-sizing: border-box;
   }
+  .logoutButton{
+align-items: flex-end;
+margin-left: 1000px;
+margin-top: 10px;
+  }
 
 </style>
 
 </head>
+<div class="logoutButton">
 <app-logout></app-logout>
+</div>
 <div class="container">
     <br>
       <input class="form-control mb-4" id="tableSearch" type="text"
