--- a/angular-app/src/app/logout/logout.component.html
+++ b/angular-app/src/app/logout/logout.component.html
@@ -1,1 +1,1 @@
-<button type="submit" (click)="onSubmit()">Logout</button>
+<button type="submit" (click)="onSubmit()" class="btn btn-primary">Logout</button>
