--- a/angular-app/src/app/course/course.component.html
+++ b/angular-app/src/app/course/course.component.html
@@ -47,3 +47,14 @@ margin-top: 10px;
                         
                     </div>
 
+
+
+<!-- <kendo-grid >
+  <kedo-grid-column-group title="Dummy Data">
+<kendo-grid-column></kendo-grid-column>
+  </kedo-grid-column-group>
+</kendo-grid> -->
+
+
+<!-- [kendoGridBinding]="data"
+field="id" title="ID" --> 
