--- a/angular-app/src/app/login/login.component.html
+++ b/angular-app/src/app/login/login.component.html
@@ -4,14 +4,14 @@
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && controls.username.errors }" />
+                <input type="text"  [(ngModel)]="authModel.email" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && controls.username.errors }" />
                 <div *ngIf="submitted && controls.username.errors" class="invalid-feedback">
                     <div *ngIf="controls.username.errors.required">Username is required</div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && controls.password.errors }" />
+                <input type="password" formControlName="password" [(ngModel)]="authModel.password" class="form-control" [ngClass]="{ 'is-invalid': submitted && controls.password.errors }" />
                 <div *ngIf="submitted && controls.password.errors" class="invalid-feedback">
                     <div *ngIf="controls.password.errors.required">Password is required</div>
                 </div>
